# DeepLabCut-live

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  analyze_video.py  pyproject.toml  pytest.ini  reinstall.sh  requirements.txt  run_dlc-live.py  run_pytorch_benchmark.py  run_tf_benchmark.py  setup.py  test.py  version.py
.github/workflows/: format.yml  python-package.yml  testing.yml
benchmarking/: howIbenchmarked.txt  requirements.txt  run.py  run_dlclive_benchmark.py
check_install/: check_install.py  install.py
deeplabcut-live/: __init__.py
dlclive/: LiveVideoInference.py  __init__.py  analyze.py  bench.py  benchmark.py  benchmark_pytorch.py  benchmark_tf.py  display.py  dlclive.py  engine.py  exceptions.py  factory.py  graph.py  live_inference.py  pose.py  utils.py  version.py
dlclive/check_install/: check_install.py  dog_clip.avi
dlclive/core/: config.py  inferenceutils.py  runner.py
dlclive/modelzoo/: __init__.py  pytorch_model_zoo_export.py  resolve_config.py  utils.py
dlclive/pose_estimation_pytorch/: __init__.py  config.py  dynamic_cropping.py  runner.py
dlclive/pose_estimation_pytorch/data/: __init__.py  image.py
dlclive/pose_estimation_pytorch/models/: __init__.py  model.py  registry.py
dlclive/pose_estimation_pytorch/models/backbones/: __init__.py  base.py  cspnext.py  hrnet.py  resnet.py
dlclive/pose_estimation_pytorch/models/detectors/: __init__.py  base.py  fasterRCNN.py  ssd.py  torchvision.py
dlclive/pose_estimation_pytorch/models/heads/: __init__.py  base.py  dekr.py  dlcrnet.py  rtmcc_head.py  simple_head.py  transformer.py
dlclive/pose_estimation_pytorch/models/modules/: __init__.py  conv_block.py  conv_module.py  gated_attention_unit.py
dlclive/pose_estimation_pytorch/models/necks/: __init__.py  base.py  layers.py  transformer.py
dlclive/pose_estimation_pytorch/models/predictors/: __init__.py  base.py  dekr_predictor.py  identity_predictor.py  paf_predictor.py  sim_cc.py  single_predictor.py
dlclive/pose_estimation_tensorflow/: graph.py  pose.py  runner.py
dlclive/predictor/: __init__.py  base.py  single_predictor.py
dlclive/processor/: README.md  __init__.py  kalmanfilter.py  processor.py
dlclive/processor/teensy_laser/: __init__.py  teensy_laser.py
docs/: DLC Live Benchmark.md  install_desktop.md  install_jetson.md
example_processors/DogJumpLED/: __init__.py  izzy_jump.py  izzy_jump_offline.py
example_processors/MouseLickLED/: __init__.py  lick_led.py
example_processors/MouseLickLED/teensy_leds/: teensy_leds.ino
example_processors/TeensyLaser/: __init__.py  teensy_laser.py
example_processors/TeensyLaser/teensy_laser/: teensy_laser.ino
examples/: run.py
scripts/: export.py  fix_deeplabcut_imports.py
tests/: conftest.py  test_benchmark_script.py  test_config.py  test_display.py  test_dlclive.py  test_engine.py  test_exceptions.py  test_factory.py  test_modelzoo.py  test_processor.py  test_utils.py
tests/tests_core/: test_assembler.py  test_assembly.py
