[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=61", "wheel" ]

[project]
name = "deeplabcut-live"
version = "1.1.1rc1"
description = "Class to load exported DeepLabCut networks and perform pose estimation on single frames (from a camera feed)"
readme = "README.md"
keywords = [ "deep-learning", "deeplabcut", "pose-estimation", "real-time" ]
license = { text = "GNU Affero General Public License v3 or later (AGPLv3+)" }
requires-python = ">=3.10,<3.13"
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "colorcet>=3",
  "dlclibrary>=0.0.6",
  "einops>=0.6.1",
  "numpy>=1.20,<2",
  "opencv-python-headless>=4.5",
  "pandas>=1.0.1,!=1.5",
  "pillow>=8",
  "pip",
  "py-cpuinfo>=5",
  "ruamel-yaml>=0.17.20",
  "scipy>=1.9",
  "tables>=3.8",
  "tqdm>=4.62.3",
]
[[project.authors]]
name = "A. & M. Mathis Labs"
email = "admin@deeplabcut.org"
[project.optional-dependencies]
pytorch = [
  "timm>=1.0.7",
  "torch>=2",
  "torchvision>=0.15",
]
tf = [
  # Tensorflow is not supported on Windows with Python >= 3.11
  "tensorflow>=2.7,<=2.10; platform_system=='Windows' and python_version<'3.11'",
  "tensorflow>=2.7,<2.12; platform_system=='Linux' and python_version<'3.11'",
  "tensorflow>=2.12; platform_system=='Linux' and python_version>='3.11'",
  "tensorflow-io-gcs-filesystem; platform_system!='Windows'",
  "tensorflow-io-gcs-filesystem==0.27; platform_system=='Windows' and python_version<'3.11'",
  "tensorflow-macos>=2.7,<2.12; platform_system=='Darwin' and python_version<'3.11'",
  "tensorflow-macos>=2.12; platform_system=='Darwin' and python_version>='3.11'",
]
[project.scripts]
dlc-live-test = "dlclive.check_install.check_install:main"
dlc-live-benchmark = "dlclive.benchmark:main"
[project.urls]
Homepage = "https://github.com/DeepLabCut/DeepLabCut-live"
Repository = "https://github.com/DeepLabCut/DeepLabCut-live"

[dependency-groups]
dev = [
  "black",
  "hypothesis",
  "pytest",
  "pytest-cov",
  "ruff",
]

# Keep only for backward compatibility with Poetry
# (without this section, Poetry assumes the wrong root directory of the project)
[tool.poetry]
packages = [ { include = "dlclive" } ]

[tool.setuptools]
include-package-data = true
[tool.setuptools.package-data]
dlclive = [
  "check_install/*",
  "modelzoo/model_configs/*.yaml",
  "modelzoo/project_configs/*.yaml",
]
[tool.setuptools.packages.find]
include = [ "dlclive*" ]

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true
[tool.ruff.lint]
select = [ "E", "F", "B", "I", "UP" ]
ignore = [ "E741", "E501", "F403", "F401" ]
[tool.ruff.lint.per-file-ignores]
"dlclive/__init__.py" = [ "E402" ]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyproject-fmt]
max_supported_python = "3.12"
generate_python_version_classifiers = true
# Avoid collapsing tables to field.key = value format (less readable)
table_format = "long"
